--- a/package.json
+++ b/package.json
@@ -5,20 +5,32 @@
 	"repository": "https://github.com/Richienb/the-module.git",
 	"author": "Richie Bendall <richiebendall@gmail.com>",
 	"license": "MIT",
-	"main": "index.js",
+	"bin": "cli.js",
 	"files": [
-		"index.js",
-		"index.d.ts"
+		"cli.js",
+		"lib"
 	],
 	"engines": {
-		"node": ">=10"
+		"node": "^10.17 || >=11.14"
 	},
 	"scripts": {
 		"lint": "xo",
 		"test": "xo && ava"
 	},
 	"keywords": [],
-	"dependencies": {},
+	"dependencies": {
+		"find-cache-dir": "^3.3.1",
+		"got": "^11.5.2",
+		"html-minifier": "^4.0.0",
+		"meow": "^7.1.0",
+		"nw-builder": "^3.5.7",
+		"ora": "^5.0.0",
+		"path-extra": "^4.3.0",
+		"puppeteer": "^5.2.1",
+		"temp-dir": "^2.0.0",
+		"v8-compile-cache": "^2.1.1",
+		"write-json-file": "^4.3.0"
+	},
 	"devDependencies": {
 		"ava": "^3.10.1",
 		"eslint-config-richienb": "^0.4.2",
