Fetch project metadata
Signed-off-by: Richie Bendall <richiebendall@gmail.com>

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 	},
 	"keywords": [],
 	"dependencies": {
+		"camelcase": "^6.0.0",
 		"electron-winstaller": "^4.0.1",
 		"find-cache-dir": "^3.3.1",
 		"got": "^11.5.2",
@@ -26,6 +27,7 @@
 		"meow": "^7.1.0",
 		"nw-builder": "^3.5.7",
 		"ora": "^5.0.0",
+		"p-fallback": "^1.0.0",
 		"path-extra": "^4.3.0",
 		"puppeteer": "^5.2.1",
 		"temp-dir": "^2.0.0",
